Overflowing in modal fixed

--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,7 @@ body {
 
 .modal.bottom-sheet {
 	max-height: 80%;
+	overflow: visible;
 }
 
 #modalHelp {
